# afkarena

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: question.md
afkarena/: __init__.py  __main__.py  cookiejar.py  errors.py  http.py  player.py  user.py
