[tool.poetry]
name = "afkarena"
version = "0.2.0"
description = "Simple API wrapper for the AFK Arena site https://cdkey.lilith.com/afk-global."
authors = ["scragly <29337040+scragly@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/scragly/afkarena"

keywords = ["afk", "arena", "afkarena", "gift", "giftcode"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.7.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
